@@ -23,6 +23,16 @@ debug = false
 #
 logtargets = /var/log/fail2ban.log
 
+# Option: syslog-target
+# Notes.: where to find syslog facility if logtarget SYSLOG
+# Values: file(socket) hostname hostname:port Default: /dev/log
+syslog-target = /dev/log
+
+# Option: syslog-facility
+# Notes.: which syslog facility to use if logtarget SYSLOG
+# Values: NUM Default: 1
+syslog-facility = 1
+
 # Option:  pidlock
 # Notes.:  path of the PID lock file (must be able to write to file).
 # Values:  FILE  Default:  /var/run/fail2ban.pid
